add timed_roslaunch as link 2/2

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dmp"]
 	path = dmp
 	url = https://github.com/sniekum/dmp
+[submodule "timed_roslaunch"]
+	path = timed_roslaunch
+	url = https://github.com/MoriKen254/timed_roslaunch
