--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "timed_roslaunch"]
 	path = timed_roslaunch
 	url = https://github.com/MoriKen254/timed_roslaunch
+[submodule "dmp"]
+	path = dmp
+	url = https://github.com/abakisita/dmp.git
