--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = universal_robot
 	url = https://github.com/ros-industrial/universal_robot.git
 	branch = melodic-devel
+[submodule "robot_body_filter"]
+	path = robot_body_filter
+	url = https://github.com/peci1/robot_body_filter.git
