--- a/obstacle_avoidance/config/filter_realsense_d435.yaml
+++ b/obstacle_avoidance/config/filter_realsense_d435.yaml
@@ -7,7 +7,10 @@ cloud_filter_chain:
   - name: robot_body_filter
     type: robot_body_filter/RobotBodyFilterPointCloud2
     params:
-      frames/sensor: 'camera_color_optical_frame'
+      frames/fixed: 'base_link'
+      frames/sensor: ''
+      #frames/filtering: frames/fixed
+      #frames/output: frames/filtering
       filter/keep_clouds_organized: False
       filter/do_clipping: False
       filter/do_contains_test: True
@@ -19,7 +22,7 @@ cloud_filter_chain:
       body_model/inflation/scale: 1.07
       body_model/inflation/padding: 0.01
       body_model/robot_description_param: '/robot_description'
-      only_links: ['base_link_inertia','shoulder_link','upper_arm_link', 'forearm_link','wrist_1_link','wrist_2_link','wrist_3_link','base_plate']
+      only_links: ['base_link_inertia','shoulder_link','upper_arm_link', 'forearm_link','wrist_1_link','wrist_2_link','wrist_3_link','base_plate','tool_claw']
       transforms/buffer_length: 15.0
       transforms/timeout/reachable: 0.2
       transforms/timeout/unreachable: 0.2
