--- a/obstacle_avoidance/config/filter_realsense_d435.yaml
+++ b/obstacle_avoidance/config/filter_realsense_d435.yaml
@@ -22,7 +22,7 @@ cloud_filter_chain:
       body_model/inflation/scale: 2.0 #1.07
       body_model/inflation/padding: 0.01
       body_model/robot_description_param: '/robot_description'
-      only_links: ['base_link_inertia','shoulder_link','upper_arm_link', 'forearm_link','wrist_1_link','wrist_2_link','wrist_3_link','base_plate','tool_claw']
+      only_links: ['base_link_inertia','shoulder_link','upper_arm_link', 'forearm_link','wrist_1_link','wrist_2_link','wrist_3_link','rg2_body_link','rg2_eef_link']
       transforms/buffer_length: 15.0
       transforms/timeout/reachable: 0.2
       transforms/timeout/unreachable: 0.2
