--- a/obstacle_avoidance/package.xml
+++ b/obstacle_avoidance/package.xml
@@ -49,12 +49,40 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>gazebo_msgs</build_depend>
-  <build_depend>rospy</build_depend>
   <build_export_depend>gazebo_msgs</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
   <exec_depend>gazebo_msgs</exec_depend>
+
+  <build_depend>rospy</build_depend>
+  <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
+
+  <build_depend>roscpp</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>std_msgs</exec_depend>
+
+  <build_depend>sensor_msgs</build_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+
+  <build_depend>moveit_core</build_depend>
+  <build_export_depend>moveit_core</build_export_depend>
+  <exec_depend>moveit_core</exec_depend>
+
+  <build_depend>tf2_ros</build_depend>
+  <build_export_depend>tf2_ros</build_export_depend>
+  <exec_depend>tf2_ros</exec_depend>
+
+  <build_depend>pcl_ros</build_depend>
+  <build_export_depend>pcl_ros</build_export_depend>
+  <exec_depend>pcl_ros</exec_depend>
+
+  <!--sensor_msgs tf2_ros pcl_ros std_msgs sensor_msgs pcl_ros visualization_msgs moveit_core moveit_ros_planning_interface moveit_ros_planning-->
 
 
   <!-- The export tag contains other, unspecified, tags -->
