arm obstacle repair

--- a/obstacle_avoidance/package.xml
+++ b/obstacle_avoidance/package.xml
@@ -85,7 +85,6 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
-  <exec_depend>gazebo_ros</exec_depend>
 
   <build_depend>trajectory_msgs</build_depend>
   <exec_depend>trajectory_msgs</exec_depend>
@@ -94,8 +93,9 @@
   <exec_depend>message_generation</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
-  <export>
-  <gazebo_ros
-  gazebo_model_path="${prefix}/models"/>
-  </export>
+
+  <exec_depend>gazebo_ros</exec_depend>
+  <export> 
+  <gazebo_ros gazebo_model_path="${prefix}/models"/> <gazebo_ros gazebo_media_path="${prefix}/models"/> 
+  </export> 
 </package>
