--- a/obstacle_avoidance/CMakeLists.txt
+++ b/obstacle_avoidance/CMakeLists.txt
@@ -73,9 +73,9 @@ add_executable(collision_check src/collision_check.cpp)
 target_link_libraries(collision_check ${catkin_LIBRARIES})
 add_dependencies(collision_check ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-add_executable(move_test src/move_test.cpp)
-target_link_libraries(move_test ${catkin_LIBRARIES})
-add_dependencies(move_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_executable(move_test src/move_test.cpp)
+#target_link_libraries(move_test ${catkin_LIBRARIES})
+#add_dependencies(move_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 #add_executable(dmp_move src/dmp_move.cpp)
 #target_link_libraries(dmp_move ${catkin_LIBRARIES})
