--- a/obstacle_avoidance/package.xml
+++ b/obstacle_avoidance/package.xml
@@ -66,6 +66,10 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <build_depend>dmp</build_depend>
+  <build_export_depend>dmp</build_export_depend>
+  <exec_depend>dmp</exec_depend>
+
   <build_depend>sensor_msgs</build_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <exec_depend>sensor_msgs</exec_depend>
