dep repair + shpere obstacle + time measures + visuals

--- a/obstacle_avoidance/models/sphere/model.config
+++ b/obstacle_avoidance/models/sphere/model.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" ?>
 <model>
-    <name>cube</name>
+    <name>sphere</name>
     <version>1.0</version>
-    <sdf version="1.7">cube.sdf</sdf>
+    <sdf version="1.7">sphere.sdf</sdf>
     <author>
         <name></name>
         <email></email>
